testdata/baselines/reference/submodule/compiler/jsxNamespaceElementChildrenAttributeIgnoredWhenReactJsx(jsx=react-jsx).errors.txt
/test.tsx(1,49): error TS2741: Property 'children' is missing in type '{ offspring: string; }' but required in type '{ children: string; }'.
/test.tsx(3,2): error TS2741: Property 'children' is missing in type '{ offspring: string; }' but required in type '{ children: string; }'.
/test.tsx(5,50): error TS2741: Property 'children' is missing in type '{ offspring: string; }' but required in type '{ children: string; }'.


==== /jsx.d.ts (0 errors) ====
    declare namespace JSX {
      interface IntrinsicElements {
        h1: { children: string }
      }
    
      type Element = string;
    
      interface ElementChildrenAttribute {
        offspring: any;
      }
    }
    
==== /test.tsx (3 errors) ====
    const Title = (props: { children: string }) => <h1>{props.children}</h1>;
                                                    ~~
!!! error TS2741: Property 'children' is missing in type '{ offspring: string; }' but required in type '{ children: string; }'.
!!! related TS2728 /jsx.d.ts:3:11: 'children' is declared here.
    
    <Title>Hello, world!</Title>;
     ~~~~~
!!! error TS2741: Property 'children' is missing in type '{ offspring: string; }' but required in type '{ children: string; }'.
!!! related TS2728 /test.tsx:1:25: 'children' is declared here.
    
    const Wrong = (props: { offspring: string }) => <h1>{props.offspring}</h1>;
                                                     ~~
!!! error TS2741: Property 'children' is missing in type '{ offspring: string; }' but required in type '{ children: string; }'.
!!! related TS2728 /jsx.d.ts:3:11: 'children' is declared here.
    
    <Wrong>Byebye, world!</Wrong>
    
==== /jsx/jsx-runtime.ts (0 errors) ====
    export {};
==== /jsx/jsx-dev-runtime.ts (0 errors) ====
    export {};
    